SAK-19427 fix the easy find bugs patterns
git-svn-id: https://source.sakaiproject.org/svn/rwiki/trunk@84222 66ffb92e-73f9-0310-93c1-f5514f145a0a